DARK: Origins > Safari browser > fix upsell page UI on mobile screen (#265)

--- a/themes/origins/styles/upsell.scss
+++ b/themes/origins/styles/upsell.scss
@@ -15,7 +15,6 @@ yc-section {
 
     yc-upsell {
       grid-area: 1 / 8 / 2 / 13;
-
       display: grid;
       gap: var(--gap-lg);
       grid-template-columns: repeat(2, 1fr);
@@ -119,6 +118,8 @@ yc-section {
       }
 
       yc-upsell {
+        width: 100%;
+        height: auto;
         text-align: center;
         display: grid;
         border: 0;
